--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -12,8 +12,8 @@
     <div class="container-fluid">
         <div class="row" style="margin: 30px">
             <div class="col"><h3 th:text="'Hi ' + ${user.getFirstName()}"></h3></div>
-            <div class="col"><a th:href="@{'/project/ad'}" class="btn btn-primary"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>Create Project</a></div>
-            <div class="col" th:if="${user.getRole() == 'PREMIUM'}" ><a th:href="@{'/client/ad'}" class="btn btn-success"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>New Client</a></div>
+            <div class="col"><a th:href="@{'/project/ad'}" class="btn btn-primary btn-block"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>Create Project</a></div>
+            <div class="col" th:if="${user.getRole() == 'PREMIUM'}" ><a th:href="@{'/client/ad'}" class="btn btn-success btn-block"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>New Client</a></div>
 <!--            <div class="col"><a th:href="@{'/project/ad'}" class="btn btn-warning"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>New Working Group</a></div>-->
 
         </div>
