--- a/src/main/resources/templates/layout_dash.html
+++ b/src/main/resources/templates/layout_dash.html
@@ -99,8 +99,8 @@
                 </h6>
                 <ul class="nav flex-column mb-2">
                     <li class="nav-item">
-                        <a class="nav-link" href="/user/edit">
-                            Change details
+                        <a class="nav-link" href="/user/detail">
+                            <i class="bi-option" style="font-size: 1.25rem; color: green;"></i> Settings
                         </a>
                     </li>
                 </ul>
