--- a/src/main/resources/templates/invoice/invoicePDF.html
+++ b/src/main/resources/templates/invoice/invoicePDF.html
@@ -122,6 +122,7 @@
         <tr class="information">
             <td colspan="2">
                 <table>
+                    <tr><td><strong><span th:text="${userName}"></span></strong></td><td><strong><span th:text="${clientName}"></span></strong></td></tr>
                     <tr>
                         <td>
                             <span th:text="${userStreet}"></span><br></br>
