--- a/src/main/resources/templates/user/detail.html
+++ b/src/main/resources/templates/user/detail.html
@@ -14,7 +14,7 @@
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">User name</label>
             <div class="col-sm-10">
-                <input type="text" readonly class="form-control-plaintext" th:value="${user.name}">
+                <input type="text" readonly class="form-control-plaintext" th:value="${user.getUsername()}">
             </div>
         </div>
         <div class="form-group row">
@@ -29,7 +29,7 @@
                 <input type="text" readonly class="form-control-plaintext" th:value="${user.lastName}">
             </div>
         </div>
-        <div class="form-group row">
+        <div class="form-group row" th:if="${user.getRole() == 'PREMIUM'}" >
             <label class="col-sm-2 col-form-label">Bank account</label>
             <div class="col-sm-10">
                 <input type="text" readonly class="form-control-plaintext" th:value="${user.bankAccount}">
@@ -44,7 +44,13 @@
     </form>
     <div>
         <a href="/user/detail" class="btn btn-success">Zpet</a>
-        <a href="/user/edit" class="btn btn-success">Edit</a>
+        <a href="/user/edit" class="btn btn-outline-warning">Edit</a>
+        <span th:if="${address == null}">
+                        <a th:href="@{/address/ad/{id}(id=${user.getId()})}" class="btn btn-outline-warning">Add address</a>
+                        </span>
+        <span th:unless="${address == null}">
+                            <a th:href="@{/address/edit/{id}(id=${user.getId()})}" class="btn btn-outline-warning"> Edit address</a>
+                        </span>
     </div>
 </div>
 </body>
