Activity log added, Some other fixes

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -17,12 +17,12 @@
                                 <li class="nav-item">
                                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Purchase Premium</a>
                                 </li>
-                                <li sec:authorize="isAuthenticated()" class="nav-item">
-                                        <a class="nav-link" href="#">authorized</a>
-                                </li>
-                                <li sec:authorize="isAnonymous()" class="nav-item">
-                                        <a class="nav-link" href="#">anonym</a>
-                                </li>
+<!--                                <li sec:authorize="isAuthenticated()" class="nav-item">-->
+<!--                                        <a class="nav-link" href="#">authorized</a>-->
+<!--                                </li>-->
+<!--                                <li sec:authorize="isAnonymous()" class="nav-item">-->
+<!--                                        <a class="nav-link" href="#">anonym</a>-->
+<!--                                </li>-->
                                 <li class="nav-item">
                                         <a class="nav-link" href="#">FAQ</a>
                                 </li>
