--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -32,6 +32,7 @@
             <input type="hidden" readonly class="form-control" th:field="*{username}">
         </div>
         <button type="submit" class="btn btn-primary">Edit details</button>
+        <a href="/user/detail" class="btn btn-success">Back</a>
     </form>
 </div>
 </body>
