englishization -log -val msgs -ui texts

--- a/src/main/resources/templates/client/add.html
+++ b/src/main/resources/templates/client/add.html
@@ -14,27 +14,27 @@
 
         <div class="form-group">
             <label >Name:</label>
-            <input type="text" th:field="*{firstName}" class="form-control" placeholder="Name" >
-            <p th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}" class="alert alert-danger" role="alert">firstName was not set</p>
+            <input type="text" th:field="*{firstName}" class="form-control" placeholder="First name" >
+            <p th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}" class="alert alert-danger" role="alert"></p>
         </div>
         <div class="form-group">
             <label >Last name:</label>
-            <input type="text" th:field="*{lastName}" class="form-control" placeholder="last name" >
-            <p th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}" class="alert alert-danger" role="alert">lastName was not set</p>
+            <input type="text" th:field="*{lastName}" class="form-control" placeholder="Last name" >
+            <p th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}" class="alert alert-danger" role="alert"></p>
         </div>
         <div class="form-group">
             <label >Company name:</label>
-            <input type="text" th:field="*{companyName}" class="form-control" placeholder="company name" >
+            <input type="text" th:field="*{companyName}" class="form-control" placeholder="Company name" >
             <p th:if="${#fields.hasErrors('companyName')}" th:errors="*{companyName}" class="alert alert-danger" role="alert">companyName was not set</p>
         </div>
         <div class="form-group">
             <label >ICO:</label>
-            <input type="text" th:field="*{ico}" class="form-control" placeholder="ico" >
+            <input type="text" th:field="*{ico}" class="form-control" placeholder="ICO code" >
             <p th:if="${#fields.hasErrors('ico')}" th:errors="*{ico}" class="alert alert-danger" role="alert">ico was not set</p>
         </div>
         <div class="form-group">
             <label >DIC:</label>
-            <input type="text" th:field="*{dic}" class="form-control" placeholder="dic" >
+            <input type="text" th:field="*{dic}" class="form-control" placeholder="DIC code" >
             <p th:if="${#fields.hasErrors('dic')}" th:errors="*{dic}" class="alert alert-danger" role="alert">dic was not set</p>
         </div>
         <div class="form-group">
