--- a/src/main/resources/templates/client/all.html
+++ b/src/main/resources/templates/client/all.html
@@ -25,10 +25,10 @@
                 <tr>
                     <th>First name</th>
                     <th>Last name</th>
-                    <th>Company name</th>
+                    <th>Company</th>
                     <th>ICO</th>
                     <th>DIC</th>
-                    <th>Manage Address</th>
+                    <th>Address</th>
                     <th>Edit</th>
                     <th>Delete</th>
                 </tr>
