--- a/src/main/resources/templates/client/edit.html
+++ b/src/main/resources/templates/client/edit.html
@@ -33,8 +33,8 @@
             <input type="text" th:field="*{dic}" class="form-control" placeholder="DIC code" >
         </div>
         <div>
-            <button type="submit" class="btn btn-primary" style="margin-right: 5px">Ulozit</button>
-            <a href="/client/all" class="btn btn-success">Zpet</a>
+            <button type="submit" class="btn btn-primary" style="margin-right: 5px">Save</button>
+            <a href="/client/all" class="btn btn-success">Back</a>
         </div>
 
     </form>
