--- a/src/main/resources/templates/invoice/all.html
+++ b/src/main/resources/templates/invoice/all.html
@@ -25,7 +25,7 @@
                 <tr>
                     <th>Project</th>
                     <th>Client</th>
-                    <th>Company name</th>
+                    <th>Company</th>
                     <th>Due by</th>
                     <th>Created</th>
                     <th>Amount</th>
