--- a/src/main/resources/templates/task/edit.html
+++ b/src/main/resources/templates/task/edit.html
@@ -9,7 +9,7 @@
 <body>
 
 <div layout:fragment="content" class="container">
-    <h2 style="margin-top: 30px">Upravit Task</h2><hr>
+    <h2 style="margin-top: 30px">Edit Task</h2><hr>
     <form th:action="@{/task/update/{id}(id=${task.id})}" th:object="${task}" method="post">
         <input type="hidden" th:value="*{id}" class="form-control" readonly="readonly" >
         <div class="form-group">
@@ -24,12 +24,12 @@
         </div>
         <div class="form-group">
             <label>Start date:</label>
-            <input type="datetime-local" th:field="*{startDate}" class="form-control" placeholder="date of start">
+            <input type="datetime-local" th:field="*{startDate}" class="form-control" placeholder="Date of start">
             <p th:if="${#fields.hasErrors('startDate')}" th:errors="*{startDate}" class="alert alert-danger" role="alert"></p>
         </div>
         <div class="form-group">
             <label>End date:</label>
-            <input type="datetime-local" th:field="*{endDate}" class="form-control" placeholder="date of end">
+            <input type="datetime-local" th:field="*{endDate}" class="form-control" placeholder="Date of end">
         </div>
         <div class="form-group" th:if="${user.getRole() == 'PREMIUM'}" >
             <label>Hour rate:</label>
@@ -38,8 +38,8 @@
         <input type="hidden" th:field="*{projectId}" class="form-control" >
 
         <div>
-            <button type="submit" class="btn btn-primary" style="margin-right: 5px">Ulozit</button>
-            <a href="/task/all" class="btn btn-success">Zpet</a>
+            <button type="submit" class="btn btn-primary" style="margin-right: 5px">Save changes</button>
+            <a href="/task/all" class="btn btn-success">Back</a>
         </div>
     </form>
 </div>
