--- a/src/main/resources/templates/user/registration.html
+++ b/src/main/resources/templates/user/registration.html
@@ -34,6 +34,8 @@
             <button type="submit" class="btn btn-primary">Sign Up</button>
         </form>
     </div>
+</div>
+</body>
 <!--    <body>-->
 <!--        <form th:action="@{/registration/addUser}" th:object="${user}" method="post">-->
 <!--            <div><label> Name : <input type="text" th:field="*{firstName}" class="form-control" placeholder="Enter name"/> </label></div>-->
