--- a/src/main/resources/templates/address/edit.html
+++ b/src/main/resources/templates/address/edit.html
@@ -16,28 +16,28 @@
         <div class="form-group">
             <label >Street:</label>
             <input type="text" th:field="*{street}" class="form-control" placeholder="Street name" >
-            <p th:if="${#fields.hasErrors('street')}" th:errors="*{street}" class="alert alert-danger" role="alert">street was not set</p>
+            <p th:if="${#fields.hasErrors('street')}" th:errors="*{street}" class="alert alert-danger" role="alert">Street was not set</p>
         </div>
         <div class="form-group">
             <label >City:</label>
             <input type="text" th:field="*{city}" class="form-control" placeholder="City" >
-            <p th:if="${#fields.hasErrors('city')}" th:errors="*{city}" class="alert alert-danger" role="alert">city was not set</p>
+            <p th:if="${#fields.hasErrors('city')}" th:errors="*{city}" class="alert alert-danger" role="alert">City was not set</p>
         </div>
         <div class="form-group">
             <label >Post code:</label>
             <input type="text" th:field="*{postCode}" class="form-control" placeholder="Post code" >
-            <p th:if="${#fields.hasErrors('postCode')}" th:errors="*{postCode}" class="alert alert-danger" role="alert">postCode was not set</p>
+            <p th:if="${#fields.hasErrors('postCode')}" th:errors="*{postCode}" class="alert alert-danger" role="alert">Postcode was not set</p>
         </div>
         <div class="form-group">
             <input type="hidden" readonly class="form-control" th:value="*{ownerId}" name="ownerId">
         </div>
         <div>
-            <button type="submit" class="btn btn-primary" style="margin-right: 5px">Ulozit</button>
+            <button type="submit" class="btn btn-primary" style="margin-right: 5px">Save</button>
             <span th:if="${client == null}">
-                        <a th:href="@{/user/detail}" class="btn btn-success">Zpet</a>
+                        <a th:href="@{/user/detail}" class="btn btn-success">Back</a>
                         </span>
             <span th:unless="${client == null}">
-                            <a th:href="@{/client/all}" class="btn btn-success">Zpet</a>
+                            <a th:href="@{/client/all}" class="btn btn-success">Back</a>
                         </span>
         </div>
 
