--- a/src/main/resources/templates/project/add.html
+++ b/src/main/resources/templates/project/add.html
@@ -15,17 +15,17 @@
         <div class="form-group">
             <label >Name:</label>
             <input type="text" th:field="*{name}" class="form-control" placeholder="Name" >
-            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="alert alert-danger" role="alert">postCode was not set</p>
+            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="alert alert-danger" role="alert"></p>
         </div>
         <div class="form-group">
             <label >Description:</label>
             <input type="text" th:field="*{description}" class="form-control" placeholder="Description" >
-            <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="alert alert-danger" role="alert">postCode was not set</p>
+            <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="alert alert-danger" role="alert"></p>
         </div>
         <div class="form-group">
             <label >Start date:</label>
             <input type="datetime-local" th:field="*{projectStart}" class="form-control" placeholder="Start" >
-            <p th:if="${#fields.hasErrors('projectStart')}" th:errors="*{projectStart}" class="alert alert-danger" role="alert">postCode was not set</p>
+            <p th:if="${#fields.hasErrors('projectStart')}" th:errors="*{projectStart}" class="alert alert-danger" role="alert"></p>
         </div>
         <div class="form-group">
             <label >End date:</label>
@@ -34,15 +34,15 @@
         <div class="form-group" >
             <label >Estimated budget:</label>
             <input type="number" th:field="*{estimatedHours}" class="form-control" placeholder="EstimatedHours" >
-            <p th:if="${#fields.hasErrors('estimatedHours')}" th:errors="*{estimatedHours}" class="alert alert-danger" role="alert">postCode was not set</p>
+            <p th:if="${#fields.hasErrors('estimatedHours')}" th:errors="*{estimatedHours}" class="alert alert-danger" role="alert"></p>
         </div>
         <div class="form-group" th:if="${user.getRole() == 'PREMIUM'}" >
             <label >Hour rate:</label>
             <input type="number" th:field="*{hourRate}" class="form-control" placeholder="Hour rate" >
         </div>
         <input type="hidden" readonly class="form-control" th:value="*{ownerId}" placeholder="id" name="ownerId">
-        <button type="submit" class="btn btn-primary">Zalozit projekt</button>
-        <a href="/project/all" class="btn btn-danger">Zrušit</a>
+        <button type="submit" class="btn btn-primary">Create project</button>
+        <a href="/project/all" class="btn btn-danger">Cancel</a>
     </form>
 </div>
 </body>
