--- a/src/main/resources/templates/task/detail.html
+++ b/src/main/resources/templates/task/detail.html
@@ -9,7 +9,7 @@
 <body>
 
 <div layout:fragment="content" class="container">
-    <h2 style="margin-top: 30px">Detail Ulohy</h2><hr>
+    <h2 style="margin-top: 30px">Task detail</h2><hr>
     <form>
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">Task name</label>
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Project End</label>
+            <label class="col-sm-2 col-form-label">Task End</label>
             <div class="col-sm-10">
                 <input type="text" readonly class="form-control-plaintext" th:value="${task.endDate}">
             </div>
@@ -43,9 +43,9 @@
         </div>
     </form>
     <div>
-        <a th:href="@{/task/edit/{id}(id=${task.getId()})}" class="btn btn-outline-primary">Upravit ulohu</a>
-        <a th:href="@{/task/delete/{id}(id=${task.getId()})}" class="btn btn-outline-danger">Smazat ulohu</a>
-        <a href="/task/all" class="btn btn-success">Zpet</a>
+        <a th:href="@{/task/edit/{id}(id=${task.getId()})}" class="btn btn-outline-primary">Edit task</a>
+        <a th:href="@{/task/delete/{id}(id=${task.getId()})}" class="btn btn-outline-danger">Delete task</a>
+        <a href="/task/all" class="btn btn-success">Back</a>
     </div>
 </div>
 </body>
