--- a/src/main/resources/templates/user/detail.html
+++ b/src/main/resources/templates/user/detail.html
@@ -43,7 +43,7 @@
         </div>
     </form>
     <div>
-        <a href="/user/detail" class="btn btn-success">Zpet</a>
+        <a href="/user/detail" class="btn btn-success">Back</a>
         <a href="/user/edit" class="btn btn-outline-warning">Edit</a>
         <span th:if="${address == null}">
                         <a th:href="@{/address/ad/{id}(id=${user.getId()})}" class="btn btn-outline-warning">Add address</a>
