--- a/src/main/resources/templates/invoice/add.html
+++ b/src/main/resources/templates/invoice/add.html
@@ -18,7 +18,7 @@
         </div>
         <div class="form-group">
             <label>Selected tasks:</label>
-            <select th:field="*{taskIds}" multiple>
+            <select th:field="*{taskIds}" multiple class="custom-select">
                 <option th:each="i : ${projectTasks}" th:value="${i.getId()}" th:text="${i.taskName}">
                 </option>
             </select>
@@ -27,7 +27,7 @@
         </div>
         <div class="form-group">
             <label>Client:</label>
-            <select th:field="*{clientId}">
+            <select th:field="*{clientId}" class="custom-select">
                 <option th:each="i : ${clients}" th:value="${i.getId()}" th:text="${i.getCompanyName()}" selected>
                 </option>
             </select>
