--- a/src/main/resources/templates/project/detail.html
+++ b/src/main/resources/templates/project/detail.html
@@ -9,7 +9,9 @@
 <body>
 
 <div layout:fragment="content" class="container">
-    <h2 style="margin-top: 30px">Project detail</h2><hr>
+    <h2 style="margin-top: 30px">Project detail</h2>
+    <div id="helper" class="form-text"><sup>To create invoice you have to have filled your address.</sup></div><hr>
+
     <form>
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">Project name</label>
@@ -59,7 +61,7 @@
         <a th:href="@{/project/delete/{id}(id=${project.getId()})}" class="btn btn-outline-danger">Delete project</a>
         <a th:href="@{/project/completed/{id}(id=${project.getId()})}" class="btn btn-outline-dark">Complete project</a><br /><br />
         <a th:href="@{/task/ad/{id}(id=${project.getId()})}" class="btn btn-outline-dark"><i class="bi-plus-circle" style="font-size: 1rem; color: forestgreen;"></i>Add Task</a>
-        <a th:if="${user.getRole() == 'PREMIUM'}"  th:href="@{/invoice/ad/{id}(id=${project.getId()})}" class="btn btn-outline-dark"><i class="bi-receipt" style="font-size: 1rem; color: purple;"></i>Create invoice</a>
+        <a th:if="${(user.getRole() == 'PREMIUM') && (address != null)}"  th:href="@{/invoice/ad/{id}(id=${project.getId()})}" class="btn btn-outline-dark"><i class="bi-receipt" style="font-size: 1rem; color: purple;"></i>Create invoice</a>
         <a href="/project/all" class="btn btn-success">Back</a>
     </div>
     <div th:switch="${#lists.size(tasks)}">
