--- a/src/main/resources/templates/address/add.html
+++ b/src/main/resources/templates/address/add.html
@@ -9,8 +9,8 @@
 <body>
 
 <div layout:fragment="content" class="container">
-    <h2><span th:if="${client != null}" th:text="${client.companyName}"></span>: Address</h2>
-    <h2><span th:if="${client == null}" th:text="${user.getNiceNameAndLastname()}"></span>: Address</h2>
+    <h2 th:if="${client != null}" style="margin-top: 30px">Add Address for: <span th:text="${client.companyName}"></span></h2>
+    <h2 th:if="${client == null}" style="margin-top: 30px">Add Address for: <span th:text="${user.getNiceNameAndLastname()}"></span></h2>
     <form th:action="@{/address/add}" th:object="${address}" method="post">
 
         <div class="form-group">
@@ -32,6 +32,8 @@
             <input type="hidden" readonly class="form-control" th:value="*{ownerId}"name="ownerId">
         </div>
         <button type="submit" class="btn btn-primary">Add new address</button>
+        <span th:if="${client == null}"><a th:href="@{/user/detail}" class="btn btn-success">Back</a></span>
+        <span th:unless="${client == null}"><a th:href="@{/client/all}" class="btn btn-success">Back</a></span>
     </form>
 </div>
 </body>
