--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -2,7 +2,7 @@
          th:fragment="header"
          xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-                <a class="navbar-brand" href="#">Reported System</a>
+                <a class="navbar-brand" href="/">Reported System</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                 </button>
