--- a/src/main/resources/templates/user/detail.html
+++ b/src/main/resources/templates/user/detail.html
@@ -29,6 +29,8 @@
                 <input type="text" readonly class="form-control-plaintext" th:value="${user.lastName}">
             </div>
         </div>
+        <hr>
+        <h4>Payment method</h4>
         <div class="form-group row" th:if="${user.getRole() == 'PREMIUM'}" >
             <label class="col-sm-2 col-form-label">Bank account</label>
             <div class="col-sm-10">
@@ -38,7 +40,27 @@
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">Role</label>
             <div class="col-sm-10">
-                <input type="text" readonly class="form-control-plaintext" th:value="${user.getAuthorities()}">
+                <input type="text" readonly class="form-control-plaintext" th:value="${user.getRole()}">
+            </div>
+        </div>
+        <hr>
+        <h4>Addresss</h4>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Street</label>
+            <div class="col-sm-10">
+                <input type="text" readonly class="form-control-plaintext" th:value="${address.street}">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">City</label>
+            <div class="col-sm-10">
+                <input type="text" readonly class="form-control-plaintext" th:value="${address.city}">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Post Code</label>
+            <div class="col-sm-10">
+                <input type="text" readonly class="form-control-plaintext" th:value="${address.postCode}">
             </div>
         </div>
     </form>
