--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -21,7 +21,7 @@
             <div class="mb-3">
                 <label class="form-label">User Name</label>
                 <input type="text" class="form-control" id="username" aria-describedby="helper" name="username">
-                v
+                <div id="helper" class="form-text"><sup>Johny, uz mas ucet? Jestli ne, tak se nejdrive registruj.</sup></div>
             </div>
             <div class="mb-3">
                 <label class="form-label">Password</label>
