--- a/src/main/resources/templates/user/detail.html
+++ b/src/main/resources/templates/user/detail.html
@@ -43,26 +43,28 @@
                 <input type="text" readonly class="form-control-plaintext" th:value="${user.getRole()}">
             </div>
         </div>
-        <hr>
-        <h4>Addresss</h4>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Street</label>
-            <div class="col-sm-10">
-                <input type="text" readonly class="form-control-plaintext" th:value="${address.street}">
+        <th:block th:if="${address != null}">
+            <hr>
+            <h4>Addresss</h4>
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Street</label>
+                <div class="col-sm-10">
+                    <input type="text" readonly class="form-control-plaintext" th:value="${address.street}">
+                </div>
             </div>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">City</label>
-            <div class="col-sm-10">
-                <input type="text" readonly class="form-control-plaintext" th:value="${address.city}">
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label">City</label>
+                <div class="col-sm-10">
+                    <input type="text" readonly class="form-control-plaintext" th:value="${address.city}">
+                </div>
             </div>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Post Code</label>
-            <div class="col-sm-10">
-                <input type="text" readonly class="form-control-plaintext" th:value="${address.postCode}">
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Post Code</label>
+                <div class="col-sm-10">
+                    <input type="text" readonly class="form-control-plaintext" th:value="${address.postCode}">
+                </div>
             </div>
-        </div>
+        </th:block>
     </form>
     <div>
         <a href="/user/detail" class="btn btn-success">Back</a>
